--- a/data-collection/index.html
+++ b/data-collection/index.html
@@ -14,7 +14,6 @@
 <section>
   <h1>Training data collection</h1>
   <button id="webcamButton">STARTWEBCAM</button>
-  <button id="logButton">LOG DATA</button>
   <button id="addUp">ADD UP</button>
   <button id="addDown">ADD DOWN</button>
   <button id="addLeft">ADD LEFT</button>
@@ -24,9 +23,9 @@
     <div style="position: relative;">
       <video id="webcam" style="position: absolute;" muted autoplay playsinline></video>
       <canvas id="output_canvas" style="position: absolute; left: 0px; top: 0px;"></canvas>
-      <div id="myimage">hoi</div>
     </div>
   </div>
+  <div id="dataSummary"></div>
 </section>
 </body>
 
