--- a/training-model/index.html
+++ b/training-model/index.html
@@ -13,5 +13,7 @@
   <h1>Training model</h1>
   <input type="file" id="data" accept=".json">
   <button id="train">TRAIN AND DOWNLOAD MODEL</button>
+  <button id="accuracy">CALCULATE ACCURACY</button>
+  <div id="accuracyResult"></div>
 </body>
 </html>
