--- a/data-collection/index.html
+++ b/data-collection/index.html
@@ -18,6 +18,7 @@
   <button id="addDown">ADD DOWN</button>
   <button id="addLeft">ADD LEFT</button>
   <button id="addRight">ADD RIGHT</button>
+  <button id="logButton">LOG DATA</button>
   <button id="download">DOWNLOAD DATA</button>
   <button id="clearData">CLEAR DATA</button>
   <div class="videoView">
